<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.freshmenuglass.MealOptionsActivity" >

    <item
        android:id="@+id/breakfast"
        android:showAsAction="never"
        android:title="@string/breakfast_label"/>
    
    <item
        android:id="@+id/lunch"
        android:showAsAction="never"
        android:title="@string/lunch_label"/>
    
    <item
        android:id="@+id/dinner"
        android:showAsAction="never"
        android:title="@string/dinner_label"/>
    
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"/>
    
    <item
        android:id="@id/wku_main_menu"
        android:title="@string/wku_menu_label"/>
    
    

</menu>
